--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.3.0",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3"
   },
   "scripts": {
